--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,7 @@ layout: compress
 				<a href="feed.xml" class="rss-icon btn"><i class="icon ion-social-rss"></i></a>
 			</div>
 			<div class="align-center">
-				<a class="btn" href="{{ site.baseurl }}/index.html">PROJEKTE</a>
-				<a class="btn" href="{{ site.baseurl }}/blog.html">BLOG</a>
-				<a class="btn" href="{{ site.baseurl }}/imprint.html">IMPRESSUM</a>
+				<a class="btn" href="{{ site.baseurl }}/index.html">Projects</a>
 			</div>
 		</div>
 		</nav>
