--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
 
     <title>{{ site.title }}</title>
     <link rel="canonical" href="{{ site.url }}{{ site.baseurl }}{{ page.url }}">
-    <link rel="shortcut icon" href="{{ "/images/favicon.png" | prepend: site.baseurl }}">    
+    <link rel="shortcut icon" href="{{ "/images/favicon.png" | prepend: site.baseurl }}">
     <meta name="description" content="{{ site.description }}">
     <meta name="robots" content="index,follow">
     <meta name="author" content="{{ site.author }}">
@@ -19,19 +19,16 @@
     <meta property="og:image:type" content="image/png" />
 
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="{% if site.twitter_username %}@{{ site.twitter_username }}{% else %} "lukashimsel" {% endif %}" />
+    <meta name="twitter:site" content="{% if site.twitter_username %}@{{ site.twitter_username }}{% else %} "chewcraft" {% endif %}" />
     <meta name="twitter:title" content="{{ site.title }}" />
     <meta name="twitter:description" content="{{ site.description }}" />
     <meta name="twitter:image" content="{{ site.url }}/images/favicon.png" />
 
-    <link href="{{ "/atom.xml" | prepend: site.baseurl }}" type="application/atom+xml" rel="alternate" title="ATOM feed">
-    <link href="{{ "/feed.xml" | prepend: site.baseurl }}" type="application/rss+xml" rel="alternate" title="RSS feed">
-
-    {% include style.html %}   
+    {% include style.html %}
 
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
-    
+
     {% if page.layout == 'post' %}
     {% if page.gists == true %}
     <script async custom-element="amp-gist" src="https://cdn.ampproject.org/v0/amp-gist-0.1.js"></script>
