Fix style nonsense

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,7 +24,8 @@
     <meta name="twitter:description" content="{{ site.description }}" />
     <meta name="twitter:image" content="{{ site.url }}/images/favicon.png" />
 
-    {% include style.html %}
+    <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
+    <link rel="stylesheet" href="{{ site.url }}/assets/css/dark.css">
 
     {% if page.custom_elements %}{{ page.custom_elements }}{% endif %}
 </head>
