--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -378,36 +378,8 @@ code, kbd {
     padding: 2px 4px;
 }
 
-@font-face {
-    font-family: "Ionicons";
-    src: url("../fonts/ionicons.ttf") format("truetype");
-    font-weight: normal;
-    font-style: normal
-}
-
-.ion-social-github:before {
-    content: "\f233"
-}
-
-.ion-social-twitter:before {
-    content: "\f243"
-}
-
-.ion-email:before {
-    content: "\f132"
-}
-
-.ion-social-rss:before {
-    content: "\f23d"
-}
-
-.ion-earth:before {
-    content: "\f276"
-}
-
-.ion-social-github:before, .ion-earth:before, .ion-email:before, .ion-social-rss:before, .ion-social-twitter:before {
+.fab {
     display: inline-block;
-    font-family: "Ionicons", sans-serif;
     speak: none;
     font-style: normal;
     font-weight: normal;
