--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,5 +27,6 @@
     <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/dark.css">
 
+    <script src="https://kit.fontawesome.com/4ae5eef027.js" crossorigin="anonymous"></script>
     {% if page.custom_elements %}{{ page.custom_elements }}{% endif %}
 </head>
